Spacing issue and some info on posts

--- a/src/scss/_feed.scss
+++ b/src/scss/_feed.scss
@@ -2,6 +2,7 @@
     width: 100%;
     display: none;
     background-color: white;
+    z-index: 10;
 }
 .hover-element:hover .hidden  {
     display: block;
